# xorer

./: .gitignore  .make-appveyor-filename.js  .travis-upload.sh  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  appveyor.yml  common_funcs.cpp  common_funcs.h  common_types.h  file_io.cpp  file_io.h  license.txt  main.cpp  ncch.cpp  ncch.h  ncch_header.h  ncsd.cpp  ncsd.h
crypto/: Cargo.toml
crypto/src/: lib.rs
getopt/: CMakeLists.txt
polarssl/: CMakeLists.txt  sha256.c
src/: cli.rs  filedata.rs  main.rs  verify.rs  xor.rs
src/types/: mod.rs  ncch.rs  ncsd.rs
